<resources>
    <string name="app_name">Inventario</string>
    <string name="Login">Login</string>
    <string name="Password">Password</string>
    <string name="SignUp">Sign Up...</string>
    <string name="SignIn">Sign In</string>
    <string name="Desafio">Inventory Challenge</string>
    <string name="repetir">Repeat Password</string>
    <string name="SignUpCorrecto">Registered Successfully</string>
    <string name="SignUpFail">Register failed</string>
    <string name="CampoVacio">Fill in the fields</string>
    <string name="ListarAulas">List Classrooms</string>
    <string name="GestionarAulas">Manage Classrooms</string>
    <string name="GestionarProfesores">Manage Teachers</string>
    <string name="cerrarSesion">Log Out</string>
    <string name="Nombre">Name</string>
    <!-- TODO: Remove or change this placeholder text -->
</resources>